<resources>
    <string name="app_name">Shenma_V0.3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="btn_totalcar">车辆类属性</string>
    <string name="btn_carattribute">BMS类属性</string>
    <string name="btn_carrealtime">车辆类实时</string>
    <string name="btn_bmsrealtime">BMS类实时</string>

    <string name="car_type">车辆类型：</string>
    <string name="car_sn">车辆SN号：</string>
    <string name="car_version">车辆版本号：</string>
    <string name="car_date">生产日期：</string>

    <string name="bms_hardwareversion">BMS硬件版本号：</string>
    <string name="bms_softwareversion">BMS软件版本号：</string>
    <string name="cell_cap_rated">电池容量：</string>
    <string name="cell_type">电池类型：</string>
    <string name="cell_box_nums">电池箱数：</string>
    <string name="cell_serial_nums">电池串数：</string>

    <string name="login">登  录</string>
    <string name="auto_save_password">记住密码</string>
    <string name="register2">注册新帐号</string>
    <string name="more_login_setting">更多登录选项</string>
    <string name="hide_login">隐身登录</string>
    <string name="silence_login">静音登录</string>
    <string name="info_accounts">允许手机/电脑同时在线</string>
    <string name="info_troopmessage">接收群消息</string>
    <string name="account">账户</string>
    <string name="password">密码</string>
    <string name="register">注  册</string>
    <string name="register_tip">提示： \n带*项为必填项\n填写邮箱方便您找回密码以及了解更多App信息</string>

    <string name="strWelLogo">欢迎Logo</string>
    <string name="strWelcomeToMain">欢迎来到主页</string>
</resources>
