<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        >
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/btn_totalcar"
            android:text="@string/btn_totalcar"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/btn_carattribute"
            android:text="@string/btn_carattribute"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/btn_carrealtime"
            android:text="@string/btn_carrealtime"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/btn_bmsrealtime"
            android:text="@string/btn_bmsrealtime"
            />
    </LinearLayout>
</LinearLayout>
