<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@+id/loginpage"
    android:background="#F4F4F4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--support.v7中的Toolbar只有Android 5 以上的版本才能使用-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:minHeight="?attr/actionBarSize">
        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="登录"
            android:layout_gravity="center"/>
    </android.support.v7.widget.Toolbar>
    <!--空白-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

    </LinearLayout>
    <!--登录显示-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/input"
            android:layout_height="0dp"
            android:layout_weight="2">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/login_input"
                android:layout_marginLeft="28.0dip"
                android:layout_marginRight="28.0dip"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                >
                <EditText android:textSize="16.0sp" android:textColor="#ff1d1d1d"
                    android:textColorHint="#ff666666" android:id="@+id/accounts"
                    android:background="#00ffffff" android:paddingLeft="12.0dip"
                    android:layout_width="fill_parent" android:layout_height="44.0dip"
                    android:hint="@string/account" android:maxLines="1" android:maxLength="16"
                    android:inputType="textVisiblePassword"/>
                <View android:background="#ffc0c3c4" android:layout_width="fill_parent"
                    android:layout_height="1.0px" android:layout_marginLeft="1.0px"
                    android:layout_marginRight="1.0px" />
                <EditText android:textSize="16.0sp" android:textColor="#ff1d1d1d"
                    android:textColorHint="#ff666666" android:gravity="center_vertical"
                    android:id="@+id/password" android:background="#00ffffff"
                    android:paddingLeft="12.0dip" android:layout_width="fill_parent"
                    android:layout_height="44.0dip" android:hint="@string/password"
                    android:maxLines="1" android:maxLength="16" android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>
        <!--登录-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="28.0dip"
            android:layout_marginRight="28.0dip"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:textSize="18.0sp"
                android:textColor="#ff333333"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/login_btn"
                android:background="@drawable/button_shape"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                />
        </LinearLayout>
        <!--注册账号-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            >
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="注册账号"
                    android:paddingRight="5dp"
                    android:id="@+id/regist"
                    />
                <View android:background="#000000" android:layout_height="fill_parent" android:layout_width="1.0px" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="忘记密码？"
                    android:paddingLeft="5dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--空白-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>
</LinearLayout>